k8s/network-policies/monitoring/02-allow-registry.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-registry
  namespace: monitoring  # 실제 모니터링 네임스페이스 이름으로 변경 필요
spec:
  podSelector: {}
  policyTypes:
  - Egress
  egress:
  - to:
    - ipBlock:
        cidr: 192.168.0.240/32
    ports:
    - protocol: TCP
      port: 443
    - protocol: TCP
      port: 80
